--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/johnnynotsolucky/prevent-default-wrapper/issues"
   },
-  "homepage": "https://github.com/johnnynotsolucky/prevent-default-wrapper#readme"
+  "homepage": "https://github.com/johnnynotsolucky/prevent-default-wrapper#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.5.3"
+  }
 }
